--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <base href="/">
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <title>CSSNEXT POWERED BY POSTCSS</title>
+  <title>TypeScript React</title>
   <script>
     if (window.document.documentMode) {
       var s = document.createElement('script');
